finish confirmed page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -58,8 +58,7 @@ router-outlet + mat-spinner.load{
 .name {
     font-size: 18px;
     font-family: psans-bold, sans-serif;
-    padding-top: 1em;
-    margin-right: 0;
+    margin: 0.5em 0.5em 0.5em 0.5em;
 }
 
 .logo {
