--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,6 @@
             <a mat-menu-item routerLink="settings">Settings</a>
             <a mat-menu-item routerLink="help">Help</a>
             <a mat-menu-item (click)="this.loginService.signOut()">Log Out</a>
-            <a mat-menu-item (click)="this.test()">Test</a>
         </mat-menu>
     </mat-toolbar>
 
@@ -52,13 +51,13 @@
                     <mat-icon class="sn-icon">dns</mat-icon>
                     <span class="sn-text" [ngClass]="{ activeT: isActive('requests') }">Requests</span>
                 </a>
-                <a mat-list-item routerLink="students" [ngClass]="{ active: isActive('students') }">
+                <a mat-list-item routerLink="confirmed" [ngClass]="{ active: isActive('students') }">
                     <mat-icon class="sn-icon">people</mat-icon>
-                    <span class="sn-text" [ngClass]="{ activeT: isActive('students') }">Students</span>
+                    <span class="sn-text" [ngClass]="{ activeT: isActive('students') }">Confirmed</span>
                 </a>
-                <a mat-list-item routerLink="calendar" [ngClass]="{ active: isActive('calendar') }">
+                <a mat-list-item routerLink="blockeddays" [ngClass]="{ active: isActive('calendar') }">
                     <mat-icon class="sn-icon">date_range</mat-icon>
-                    <span class="sn-text" [ngClass]="{ activeT: isActive('calendar') }">Calendar</span>
+                    <span class="sn-text" [ngClass]="{ activeT: isActive('calendar') }">Blocked Days</span>
                 </a>
                 <a mat-list-item routerLink="create" [ngClass]="{ active: isActive('create') }">
                     <mat-icon class="sn-icon">chrome_reader_mode</mat-icon>
