--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -9,7 +9,7 @@
                         <p style="font-size: 18px; margin-bottom: 0.125em">Monday,</p>
                         <p style="font-size: 18px; margin-top: 0.125em">August 12th</p>
                     </div>
-                    <div style="flex: 6; padding: 0 0.5em">
+                    <div style="flex: 5; padding: 0 0.5em">
                         <span style="font-size: 24px; color: navy;">From:</span>
                         <p style="font-size: 18px;">Joshua Gelb</p>
                     </div>
@@ -32,7 +32,7 @@
                     </button>
                     <button mat-stroked-button color="warn" style="margin-right: 1em; float: right;">Deny</button>
                 </div>
-                <p style="color: lightgray; margin: -1em 0 0.25em 0.5em; padding: 0; font-size: 14px">xj65sl9dF</p>
+                <p style="color: lightgray; font-family: psans-light, sans-serif; margin: -1em 0 0.25em 0.5em; padding: 0; font-size: 16px">xj65sl9dF</p>
             </mat-card-actions>
         </mat-card>
     </div>
