I have no idea what the heck happened I hope I didn't mess it up completely

--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -8,7 +8,7 @@
                         <input matInput name="studentID" placeholder="Student ID" formControlName="firstCtrl" data-lpignore="true" required>
                     </mat-form-field>
                     <div>
-                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit" (click)="loadSID()">Next</button>
+                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit" >Next</button>
                     </div>
                 </form>
             </mat-step>
@@ -22,7 +22,7 @@
                     </mat-form-field>
                     <div>
                         <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
-                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit" (click)="loadDate()">Next</button>
+                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit">Next</button>
                     </div>
                 </form>
             </mat-step>
@@ -42,7 +42,7 @@
                     </div>
                     <div>
                         <button mat-stroked-button matStepperPrevious style="margin-right: 1em">Back</button>
-                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" (click)="loadTeachers()" type="submit">Next</button>
+                        <button mat-raised-button matStepperNext style="background-color: dodgerblue; color: white" type="submit">Next</button>
                     </div>
                 </form>
             </mat-step>
