--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -1,45 +1,103 @@
-<div style="padding: 100px" *ngIf="requests.length">
-    <div class="card-container" *ngFor="let r of requests">
-        <mat-card class="card">
-            <mat-card-title style="font-family: psans-med, sans-serif; font-size: 32px; padding: 0.25em 0.5em 0.5em;">{{r}}</mat-card-title>
-            <mat-card-content style="padding-left: 1em; margin-bottom: 0;">
-                <div style="display: inline-flex; width: 100%; margin: 0 0 0 1em">
-                    <div style="flex: 4; padding: 0 0.5em;">
-                        <span style="font-size: 24px; color: navy;">Date:</span>
-                        <p style="font-size: 18px; margin-bottom: 0.125em">Monday,</p>
-                        <p style="font-size: 18px; margin-top: 0.125em">August 12th</p>
-                    </div>
-                    <div style="flex: 5; padding: 0 0.5em">
-                        <span style="font-size: 24px; color: navy;">From:</span>
-                        <p style="font-size: 18px;">Joshua Gelb</p>
-                    </div>
-                    <div style="flex: 6; padding: 0 0.5em">
-                        <span style="font-size: 24px; color: navy; margin-left: 0;">Reason:</span>
-                        <p style="font-size: 18px;">Homework Makeup</p>
-                    </div>
-                    <div style="flex: 4; padding: 0 0.5em">
-                        <span style="font-size: 24px; color: navy;">Status:</span>
-                        <p *ngIf="approved && !denied" style="font-size: 18px; color: limegreen;">Approved</p>
-                        <p *ngIf="denied" style="font-size: 18px; color: red;">Denied</p>
-                        <p *ngIf="!approved && !denied" style="font-size: 18px;">Pending</p>
-                    </div>
+<div *ngIf="!(loadedP && loadedW)" style="width: 100%; alignment: center; text-align: center;">
+    <div style="display: inline-flex; alignment: center;">
+        <mat-card style="margin-top: 100px; padding:1em; alignment: center; flex: 1" class="card">
+            <div style="display: flex; padding: 1em; width: 100%">
+                <div style="flex: 1; display: inline-flex">
+                    <mat-spinner></mat-spinner>
+                    <span style="height: 100%; font-size: 20pt; flex: 1; padding-left: 2em; padding-top: 10%;">Please wait</span>
                 </div>
-            </mat-card-content>
-            <mat-card-actions style="overflow: auto">
-                <div style="float: right; width: 100%; margin: 0 1em -0.25em;">
-                    <button mat-raised-button style="float: right; background-color: limegreen">
-                        <span class="mat-button-wrapper" style="color: white; font-size: 16px">Allow</span>
-                    </button>
-                    <button mat-stroked-button color="warn" style="margin-right: 1em; float: right;">Deny</button>
-                </div>
-                <p style="color: lightgray; font-family: psans-light, sans-serif; margin: -1em 0 0.25em 0.5em; padding: 0; font-size: 16px">xj65sl9dF</p>
-            </mat-card-actions>
+            </div>
         </mat-card>
     </div>
 </div>
 
-<div style="padding: 100px; alignment: center" *ngIf="!requests.length">
-    <mat-card class="card">
-        <mat-card-title style="padding: 0.5em;">No more pending requests!</mat-card-title>
-    </mat-card>
+<div *ngIf="loadedP && loadedW">
+    <div class="card-container" style="margin: 100px 120px 20px; font-family: psans-bold, sans-serif; font-size: 28px">
+        Waiting for teacher approval
+    </div>
+    <div style="margin: 0 100px 100px; padding-top: 0;" *ngIf="pending.length > 0">
+        <div class="card-container" *ngFor="let p of pending">
+            <mat-card class="card">
+                <mat-card-title style="font-family: psans-med, sans-serif; font-size: 32px; padding: 0.25em 0.5em 0.5em;">{{p.name}}</mat-card-title>
+                <mat-card-content style="padding-left: 1em; margin-bottom: 0;">
+                    <div style="display: inline-flex; width: 100%; margin: 0 0 0 1em">
+                        <div style="flex: 4; padding: 0 0.5em;">
+                            <span style="font-size: 24px; color: navy;">Date:</span>
+                            <p style="font-size: 18px; margin-bottom: 0.125em">{{p.weekday}}</p>
+                            <p style="font-size: 18px; margin-top: 0.125em">{{p.date}}</p>
+                        </div>
+                        <div style="flex: 5; padding: 0 0.5em">
+                            <span style="font-size: 24px; color: navy;">From:</span>
+                            <p style="font-size: 18px;">{{p.fromTeach}}</p>
+                        </div>
+                        <div style="flex: 6; padding: 0 0.5em">
+                            <span style="font-size: 24px; color: navy; margin-left: 0;">Reason:</span>
+                            <p style="font-size: 18px;">{{p.reason}}</p>
+                        </div>
+                        <div style="flex: 4; padding: 0 0.5em">
+                            <span style="font-size: 24px; color: navy;">Status:</span>
+                            <p style="font-size: 18px;">Waiting for Teacher Approval</p>
+                        </div>
+                    </div>
+                </mat-card-content>
+                <mat-card-actions style="overflow: auto">
+                    <div style="float: right; width: 100%; margin: 0 1em -0.25em;">
+                        <button mat-raised-button style="float: right; background-color: limegreen">
+                            <span class="mat-button-wrapper" style="color: white; font-size: 16px" (click)="allow(p.slipID)">Allow</span>
+                        </button>
+                        <button mat-stroked-button color="warn" style="margin-right: 1em; float: right;" (click)="deny(p.slipID)">Deny</button>
+                    </div>
+                    <p style="color: lightgray; font-family: psans-light, sans-serif; margin: -1em 0 0.25em 0.5em; padding: 0; font-size: 14px">{{p.slipID}}</p>
+                </mat-card-actions>
+            </mat-card>
+        </div>
+    </div>
+
+    <div style="margin: 0 100px 100px; alignment: center" *ngIf="pending.length === 0">
+        <mat-card class="card">
+            <mat-card-title style="padding: 0.5em;">No current requests needing your approval</mat-card-title>
+        </mat-card>
+    </div>
+
+    <div style="margin: 100px 120px 20px; font-family: psans-bold, sans-serif; font-size: 28px">
+        Waiting for student approval
+    </div>
+
+    <div style="margin: 0 100px 100px;" *ngIf="waiting.length > 0">
+        <div class="card-container" *ngFor="let w of waiting">
+            <mat-card class="card">
+                <mat-card-title style="font-family: psans-med, sans-serif; font-size: 32px; padding: 0.25em 0.5em 0.5em;">{{w.name}}</mat-card-title>
+                <mat-card-content style="padding-left: 1em; margin-bottom: 0;">
+                    <div style="display: inline-flex; width: 100%; margin: 0 0 0 1em">
+                        <div style="flex: 4; padding: 0 0.5em;">
+                            <span style="font-size: 24px; color: navy;">Date:</span>
+                            <p style="font-size: 18px; margin-bottom: 0.125em">{{w.weekday}}</p>
+                            <p style="font-size: 18px; margin-top: 0.125em">{{w.date}}</p>
+                        </div>
+                        <div style="flex: 5; padding: 0 0.5em">
+                            <span style="font-size: 24px; color: navy;">From:</span>
+                            <p style="font-size: 18px;">{{w.fromTeach}}</p>
+                        </div>
+                        <div style="flex: 6; padding: 0 0.5em">
+                            <span style="font-size: 24px; color: navy; margin-left: 0;">Reason:</span>
+                            <p style="font-size: 18px;">{{w.reason}}</p>
+                        </div>
+                        <div style="flex: 4; padding: 0 0.5em">
+                            <span style="font-size: 24px; color: navy;">Status:</span>
+                            <p style="font-size: 18px;">Waiting for Student Approval</p>
+                        </div>
+                    </div>
+                </mat-card-content>
+                <mat-card-actions style="overflow: auto">
+                    <p style="color: lightgray; font-family: psans-light, sans-serif; margin: -1em 0 0.25em 0.5em; padding: 0; font-size: 14px">{{w.slipID}}</p>
+                </mat-card-actions>
+            </mat-card>
+        </div>
+    </div>
+
+    <div style="margin: 0 100px 100px; alignment: center" *ngIf="waiting.length === 0">
+        <mat-card class="card">
+            <mat-card-title style="padding: 0.5em;">You have no pending requests awaiting student approval</mat-card-title>
+        </mat-card>
+    </div>
 </div>
