--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,8 +30,8 @@
     padding-left: 1.2em;
     padding-right: 1em;
     color: #585858;
-    font-weight: bold;
-    font-size: 13pt;
+    font-weight: normal;
+    font-size: 14pt;
 }
 
 .sn-icon {
