--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -21,7 +21,7 @@
                 <mat-card-title style="font-family: psans-med, sans-serif; font-size: 32px; padding: 0.25em 0.5em 0.5em;">{{p.name}}</mat-card-title>
                 <mat-card-content style="padding-left: 1em; margin-bottom: 0;">
                     <div style="display: inline-flex; width: 100%; margin: 0 0 0 1em">
-                        <div style="flex: 4; padding: 0 0.5em;">
+                        <div style="flex: 3; padding: 0 0.5em;">
                             <span style="font-size: 24px; color: navy;">Date:</span>
                             <p style="font-size: 18px; margin-bottom: 0.125em">{{p.weekday}}</p>
                             <p style="font-size: 18px; margin-top: 0.125em">{{p.date}}</p>
@@ -30,11 +30,11 @@
                             <span style="font-size: 24px; color: navy;">From:</span>
                             <p style="font-size: 18px;">{{p.fromTeach}}</p>
                         </div>
-                        <div style="flex: 6; padding: 0 0.5em">
+                        <div style="flex: 5; padding: 0 0.5em">
                             <span style="font-size: 24px; color: navy; margin-left: 0;">Reason:</span>
                             <p style="font-size: 18px;">{{p.reason}}</p>
                         </div>
-                        <div style="flex: 4; padding: 0 0.5em">
+                        <div style="flex: 6; padding: 0 0.5em">
                             <span style="font-size: 24px; color: navy;">Status:</span>
                             <p style="font-size: 18px;">Waiting for Teacher Approval</p>
                         </div>
@@ -69,7 +69,7 @@
                 <mat-card-title style="font-family: psans-med, sans-serif; font-size: 32px; padding: 0.25em 0.5em 0.5em;">{{w.name}}</mat-card-title>
                 <mat-card-content style="padding-left: 1em; margin-bottom: 0;">
                     <div style="display: inline-flex; width: 100%; margin: 0 0 0 1em">
-                        <div style="flex: 4; padding: 0 0.5em;">
+                        <div style="flex: 3; padding: 0 0.5em;">
                             <span style="font-size: 24px; color: navy;">Date:</span>
                             <p style="font-size: 18px; margin-bottom: 0.125em">{{w.weekday}}</p>
                             <p style="font-size: 18px; margin-top: 0.125em">{{w.date}}</p>
@@ -78,17 +78,20 @@
                             <span style="font-size: 24px; color: navy;">From:</span>
                             <p style="font-size: 18px;">{{w.fromTeach}}</p>
                         </div>
-                        <div style="flex: 6; padding: 0 0.5em">
+                        <div style="flex: 5; padding: 0 0.5em">
                             <span style="font-size: 24px; color: navy; margin-left: 0;">Reason:</span>
                             <p style="font-size: 18px;">{{w.reason}}</p>
                         </div>
-                        <div style="flex: 4; padding: 0 0.5em">
+                        <div style="flex: 6; padding: 0 0.5em">
                             <span style="font-size: 24px; color: navy;">Status:</span>
                             <p style="font-size: 18px;">Waiting for Student Approval</p>
                         </div>
                     </div>
                 </mat-card-content>
                 <mat-card-actions style="overflow: auto">
+                    <div style="float: right; width: 100%; margin: 0 1em -0.25em;">
+                        <button mat-stroked-button color="warn" (click)="deletePass(w.slipID)" style="float: right;">Cancel Request</button>
+                    </div>
                     <p style="color: lightgray; font-family: psans-light, sans-serif; margin: -1em 0 0.25em 0.5em; padding: 0; font-size: 14px">{{w.slipID}}</p>
                 </mat-card-actions>
             </mat-card>
